--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -16,7 +16,7 @@
         // "--query-driver=/usr/bin/clang++",
         // clang-tidy功能
         "--clang-tidy",
-        "--clang-tidy-checks=performance-*,bugprone-*",,
+        "--clang-tidy-checks=performance-*,bugprone-*",
         // 全局补全（会自动补充头文件）
         "--all-scopes-completion",
         // 更详细的补全内容
